RESOLVED FIXED243980
Fix a misnomer in Config::permanentlyFreeze().
https://bugs.webkit.org/show_bug.cgi?id=243980
Summary Fix a misnomer in Config::permanentlyFreeze().
Mark Lam
Reported 2022-08-16 00:59:16 PDT
The purpose of the `true` value passed to `vm_protect` is not to `DisallowPermissionChangesAfterThis`, but to `UpdateMaximumPermission`. Rename the related enums accordingly to reflect this.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-08-16 00:59:42 PDT
Mark Lam
Comment 2 2022-08-16 01:09:50 PDT
Mark Lam
Comment 3 2022-08-16 08:55:00 PDT
EWS
Comment 4 2022-08-16 13:39:53 PDT
Committed 253481@main (50ae87b49b31): <https://commits.webkit.org/253481@main> Reviewed commits have been landed. Closing PR #3363 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.