Fix a misnomer in Config::permanentlyFreeze(). https://bugs.webkit.org/show_bug.cgi?id=243980 <rdar://problem/98710591>

Reviewed by Justin Michaud.

The purpose of the `true` value passed to `vm_protect` is not to
`DisallowPermissionChangesAfterThis`, but to `UpdateMaximumPermission`.
Rename the related enums accordingly to reflect this.

* Source/WTF/wtf/WTFConfig.cpp:
(WTF::Config::permanentlyFreeze):

Canonical link: https://commits.webkit.org/253481@main